@@ -1,6 +1,7 @@
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.fge.jsonschema.core.exceptions.ProcessingException;
 import org.f24.dto.form.F24Simplified;
+import org.f24.dto.form.F24Standard;
 import org.f24.exception.ResourceException;
 import org.f24.service.pdf.PDFCreatorFactory;
 import org.f24.service.validator.Validator;
@@ -16,13 +17,22 @@ import java.text.ParseException;
 public class F24GeneratorTest {
 
     public static void main(String[] args) throws IOException, ResourceException, ProcessingException, ParseException {
-        String jsonFile = "src/test/resources/input/f24simplified.json";
-        String jsonString = new String(Files.readAllBytes(Paths.get(jsonFile)));
+        String simplifiedJson = "src/test/resources/input/f24simplified.json";
+        String simplifiedString = new String(Files.readAllBytes(Paths.get(simplifiedJson)));
 
-        F24Simplified f24Form = new ObjectMapper().readValue(jsonString, F24Simplified.class);
-        Validator validator = ValidatorFactory.createValidator(f24Form);
-        validator.validate();
+        F24Simplified f24Simplified = new ObjectMapper().readValue(simplifiedString, F24Simplified.class);
+        Validator simplifiedValidator = ValidatorFactory.createValidator(f24Simplified);
+        simplifiedValidator.validate();
 
-        Files.write(Path.of("src/test/resources/output/f24simplified.pdf"), PDFCreatorFactory.createPDFCreator(f24Form).createPDF());
+        Files.write(Path.of("src/test/resources/output/f24simplified.pdf"), PDFCreatorFactory.createPDFCreator(f24Simplified).createPDF());
+
+        String standardJson = "src/test/resources/input/f24standard.json";
+        String standardString = new String(Files.readAllBytes(Paths.get(standardJson)));
+
+        F24Standard f24Standard = new ObjectMapper().readValue(standardString, F24Standard.class);
+        Validator standardValidator = ValidatorFactory.createValidator(f24Standard);
+        standardValidator.validate();
+
+        Files.write(Path.of("src/test/resources/output/f24standard.pdf"), PDFCreatorFactory.createPDFCreator(f24Standard).createPDF());
     }
 }
